test_suite5/ALAN/test_suite/alan-2022-examples/failing/004110_mutation.alan
source h begin leave(while 7) end
